# algorithmic-exercizes

./: .cproject  .gitignore  .project  README.md  cp_example.sh
alphabet_cake/: CMakeLists.txt  Makefile  input_file.txt
alphabet_cake/include/: algorithm.h  alphabet_cake.h
alphabet_cake/src/: alphabet_cake.cpp  main.cpp
alphabet_cake/test/: CMakeLists.txt  alphabet_cake.unittest.cpp
count_unique_vectors/: CMakeLists.txt  Makefile
count_unique_vectors/include/: algorithm.h
count_unique_vectors/src/: algorithm.cpp
count_unique_vectors/test/: CMakeLists.txt  algorithm.unittest.cpp
example/: .gitignore  CMakeLists.txt  Makefile
example/include/: example.h
example/src/: example.cpp  main.cpp
example/test/: CMakeLists.txt  example.unittest.cpp
googletest/: Makefile
include/cmake/: conditionally-execute-unittest.cmake  gtest-unittest.cmake
include/cmake/scripts/: conditionally-execute-unittest.sh
include/make/: autoconf.mk  autoreconf.mk  coverage.mk  defaults.mk  github.mk  packageDeps.mk  utils.mk
include/make/package/: automake.mk  cmake.mk  common.mk
include/tools/staging/: set-env
play_the_dragon/: CMakeLists.txt  Makefile
play_the_dragon/include/: play_the_dragon.h
play_the_dragon/src/: main.cpp  play_the_dragon.cpp
play_the_dragon/test/: CMakeLists.txt  play_the_dragon.unittest.cpp
ratatouille/: CMakeLists.txt  Makefile
ratatouille/include/: ratatouille.h
ratatouille/src/: main.cpp  ratatouille.cpp
ratatouille/test/: CMakeLists.txt  ratatouille.unittest.cpp
template/: CMakeLists.txt  Makefile
template/include/: algorithm.h
template/src/: algorithm.cpp  main.cpp
template/test/: CMakeLists.txt  algorithm.unittest.cpp
